fix grid sizing on mobile device

--- a/hugo/src/scss/_player.scss
+++ b/hugo/src/scss/_player.scss
@@ -77,6 +77,9 @@ $podcast-player-cover-margin: .5rem;
     }
   }
 }
+.player-playback {
+  padding: 0 1rem;
+}
 .podcast-player-seek {
   position: relative;
   input[type='range'] {
@@ -134,6 +137,7 @@ $podcast-player-cover-margin: .5rem;
   }
   .player-playback {
     grid-area: playback;
+    padding: 0;
   }
   .player-rate {
     grid-area: speed;
